--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <version>1.3.2</version>
         </dependency>
         <dependency>
+            <groupId>net.sourceforge.argparse4j</groupId>
+            <artifactId>argparse4j</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>2.3.0</version>
