--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.abdn</groupId>
+            <artifactId>SimpleNLG</artifactId>
+            <version>4.4.8</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
