--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -126,7 +127,9 @@
                 <version>2.7.2</version>
                 <configuration>
                     <includes>
-                        <include>**/*/Test*.java</include>
+                        <include>**/*/*Test.java</include>
+                        <include>**/*/*IT.java</include>
+                        <include>**/*/*It.java</include>
                     </includes>
                 </configuration>
             </plugin>
@@ -146,7 +149,7 @@
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                <version>4.1.0</version>
+                <version>4.3.0</version>
                 <configuration>
                     <repoToken>${env.COVERALLS_REPO_TOKEN}</repoToken>
                 </configuration>
