--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>github.jdrost1818.plaster</groupId>
     <artifactId>plaster</artifactId>
-    <version>1.1.1</version>
+    <version>1.1.1</version><!--PROJECT_ID-->
 
     <packaging>jar</packaging>
 
@@ -70,6 +70,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.zafarkhaja</groupId>
+            <artifactId>java-semver</artifactId>
+            <version>0.9.0</version>
         </dependency>
 
         <dependency>
